tests/fixtures/errors/range_index_invalid.gcl
// Error: range index with start > end
range TimeStep(100.0 s, 0.0 s, step: 0.1 s);
